--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1 class="title_app">Graph Connections</h1>
     <div id="app"></div>
     <div id="gui_container"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
