--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css">
-    <title>Vite + TS</title>
+    <title>Graph Connections</title>
   </head>
   <body>    
     <h1 class="title_app">Graph Connections</h1>
